--- a/oppgave_2/src/app/globals.css
+++ b/oppgave_2/src/app/globals.css
@@ -2,6 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+/* CSS HERE */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation-button {
+  display: inline-block;
+  background-color: #555555;
+  color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 40px 60px 40px 60px;
+  margin: 40px 16px 40px 16px;
+  
+}
+
+.navigation-button:hover {
+  background-color: black;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+/* STOP */
+
 @layer base {
   :root {
     --background: 0 0% 100%;
